Fixed wrapping
- display: flex is defined on link-list-25 now, which will be the parent element
- flex: is defined on link-list-body which will be the child-element

--- a/source/scss/components/_link-list.scss
+++ b/source/scss/components/_link-list.scss
@@ -1,11 +1,13 @@
 .link-list-25 {
-
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: $grid-gutter-width;
   padding-left: $grid-gutter-width / 2;
   padding-right: $grid-gutter-width / 2;
-  width: 100%;
+
 
   .link-list-body {
+    flex: 0 0 100%;
     padding: 10px; // [EH] sry for the pixels ... but the drafts
   }
 
@@ -16,6 +18,10 @@
 
 @include media-breakpoint-up("md") {
   .link-list-25 {
+    flex-wrap: nowrap;
+  }
+
+  .link-list-body {
     flex: 0 0 25%;
     max-width: 25%;
   }
